[package]
name = "sp-sandbox"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "This crate provides means to instantiate and execute wasm modules."
readme = "README.md"

[dependencies]
wasmi = { version = "0.9.0", optional = true }
sp-core = { version = "6.0.0", default-features = false, path = "../core" }
sp-std = { version = "4.0.0", default-features = false, path = "../std" }
sp-io = { version = "6.0.0", default-features = false, path = "../io" }
sp-wasm-interface = { version = "6.0.0", default-features = false, path = "../wasm-interface" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4", default-features = false }

[dev-dependencies]
wat = "1.0"
assert_matches = "1.3.0"

[features]
default = ["std"]
std = [
	"wasmi",
	"sp-core/std",
	"sp-std/std",
	"codec/std",
	"sp-io/std",
	"sp-wasm-interface/std",
	"log/std",
]
strict = []
wasmer-sandbox = []
